# matrix_lib_hao

./: CMakeLists.txt  Makefile  README
inc/: CMakeLists.txt  acml.h  matrix_1d.h  matrix_2d.h  matrix_2d_blas_lapack.h  matrix_3d.h  matrix_all.h  matrix_base.h  matrix_define.h  matrix_element_wise.h  matrix_mpi.h
inc/lib_hao/: blas_lapack_traits.h  f77lapack_traits.h  magma_traits.h  matrix_2d.h  matrix_2d_blas_lapack.h  matrix_3d.h  matrix_element_wise.h  matrix_linalg.h  matrix_mpi.h
src/: CMakeLists.txt  matrix_2d_blas_lapack.cpp  matrix_mpi.cpp
test/: CMakeLists.txt  matrix_2d_blas_lapack_test.cpp  matrix_class_test.cpp  matrix_linalg_test.cpp  matrix_mpi_test.cpp  matrix_size_linalg_test.cpp  standalone_zheevd_test.cpp  test_all.cpp  zheevd_test.cpp
